Powerby css alignment fix

--- a/web/rainmaker/packages/employee/src/modules/index.css
+++ b/web/rainmaker/packages/employee/src/modules/index.css
@@ -1,5 +1,4 @@
 .jk-footer {
-    position: fixed;
     width: 100%;
     right: 0;
     bottom: 0;
